--- a/ocs_ci/templates/workloads/fio/fio_dc.yaml
+++ b/ocs_ci/templates/workloads/fio/fio_dc.yaml
@@ -33,6 +33,8 @@ spec:
                  "--filesize=1G",
                  "--invalidate=1",
                  "--rwmixread=25",
+                 "--rate=200M",
+                 "--ioengine=libaio",
                  "--output-format=json"]
           imagePullPolicy: IfNotPresent
       volumes:
